--- a/OnlinePortfolio/templates/About.html
+++ b/OnlinePortfolio/templates/About.html
@@ -169,8 +169,8 @@
             <div class="col-sm-6">
               <div class="card-details">
                 <div class="card-body">
-                  <h5 class="card-title">Basic Troubleshooting</h5>
-                  <p class="card-text">The goal of troubleshooting is to determine why something does not work as expected and explain how to resolve the problem.</p>
+                  <h5 class="card-title">Network security</h5>
+                  <p class="card-text">Network security services help protect a business' network from unauthorized access. IT services can create and issue access authorization to those who need it.</p>
                   <a href="#" class="btn btn-primary">Click me</a>
                 </div>
               </div>
@@ -178,8 +178,8 @@
             <div class="col-sm-6">
               <div class="card-details">
                 <div class="card-body">
-                  <h5 class="card-title">Web Development</h5>
-                  <p class="card-text">The tasks associated with creating, building, and maintaining websites and web applications that run online on a browser.</p>
+                  <h5 class="card-title">Email services</h5>
+                  <p class="card-text">Ensure seamless email system operations, security, and user support. Collaborate to optimize services, resolve issues, and enhance communication efficiency.</p>
                   <a href="#" class="btn btn-primary">Click me</a>
                 </div>
               </div>
