--- a/OnlinePortfolio/templates/nav.html
+++ b/OnlinePortfolio/templates/nav.html
@@ -21,8 +21,9 @@
       </ul>
     </div>
     <div class="ml-auto">
-      <button type="button">Download CV</button>
+      <button type="button" onclick="window.location.href='https://drive.google.com/file/d/1kZSG1CfUgumwg4iCpEAWsHntoBz_EkgX/view?usp=drive_link'">Download CV</button>
     </div>
+  
   </div>
 </nav>
 
