--- a/OnlinePortfolio/templates/resume.html
+++ b/OnlinePortfolio/templates/resume.html
@@ -84,7 +84,7 @@
               </p>
             </div>
             <br>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-sm-6">
                 <div class="card-details">
                   <div class="card-body">
@@ -94,16 +94,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6">
-                <div class="card-details">
-                  <div class="card-body">
-                    <h5 class="card-title">School Projects</h5>
-                    <p class="card-text">Collective school projects with different roles i partake </p>
-                    <button class="general_btn" type="button" style="color: white;"><a href="{% url 'base:project' %}">Click Me</a></button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </div> -->
             <br>
           </div>
           
