--- a/OnlinePortfolio/static/css/main.css
+++ b/OnlinePortfolio/static/css/main.css
@@ -191,9 +191,12 @@ margin: 0;
 padding: 0;
 line-height: 1;
 font-weight: 700;
-padding-top: 150px;
+padding-top: 100px;
 }
 
+#header h1 a{
+  color: white;
+  }
 
 #header h2 {
 font-size: 24px;
