--- a/OnlinePortfolio/templates/homecontent.html
+++ b/OnlinePortfolio/templates/homecontent.html
@@ -48,11 +48,11 @@
       </div>
       <div class=" container-fluid col">
         <div class="description">
-          <p>Back in 2018, I made the decision to pursue IT as a hobby after being inspired by my favorite professor, who was an IT major. Since then, I've been intrigued by the field and curious about what IT professionals do outside of teaching. Fast-forward to today, and I feel fortunate to have enrolled in a prestigious university as an IT major student.</p>
-          <p p>Now Growing, excited to embark on a IT career in flexible roles, armed with a growing skill set in technology and a strong dedication to attention to detail. Motivated by my eagerness to execute tasks accurately and thrive on self-motivation. Constantly seeking ways to improve and adapt my communication skills to better serve the evolving needs of the field.</p>          <!-- Add more content here if needed -->
+          <p>{{user.intro1}}</p>
+          <p>{{user.intro2}}</p> 
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-sm-6">
             <div class="card-details">
               <div class="card-body">
@@ -62,16 +62,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card-details">
-              <div class="card-body">
-                <h5 class="card-title">School Projects</h5>
-                <p class="card-text">Collective school projects with different roles i partake </p>
-                <button class="general_btn" type="button" style="color: white;"><a href="{% url 'base:gallery' %}">Click Me</a></button>
-              </div>
-            </div>
-          </div>
-        </div>
+        </div> -->
       </div>
     </div>
 </header>
